# Chess-with-ROS

./: README.md
ros1819-final-project/: README.md  bitbucket-pipelines.yml  readme.txt
ros1819-final-project/ROS-FF/: .gitignore  CMakeLists.txt  README.md  package.xml
ros1819-final-project/ROS-FF/ff-domains/: .gitignore  block_world  block_world.pddl  block_world_2  block_world_3  chess_world  chess_world.pddl  chess_world_2  chess_world_3
ros1819-final-project/ROS-FF/launch/: ff_node.launch  ff_service.launch
ros1819-final-project/ROS-FF/src/: CMakeLists.txt
ros1819-final-project/ROS-FF/src/ff/: CMakeLists.txt  ff.h  inst_easy.c  inst_final.c  inst_hard.c  inst_pre.c  lex-fct_pddl.l  lex-ops_pddl.l  lex.fct_pddl.c  lex.ops_pddl.c  main.c  memory.c  output.c  scan-fct_pddl.y  scan-ops_pddl.y  search.c
ros1819-final-project/ROS-FF/src/ros/: CMakeLists.txt  ff-node-service.cpp  ff-node.cpp  ff_client.cpp
ros1819-final-project/UR3-IK/: CMakeLists.txt  README.md  package.xml  test_ur3ik.txt
ros1819-final-project/UR3-IK/src/: ik_client.cpp  ik_server.cpp  ur3.cpp
ros1819-final-project/UR3-IK/srv/: UR3IK.srv
ros1819-final-project/aruco_ros/aruco_ros/src/: simple_single.cpp
ros1819-final-project/chesslab_setup/: CMakeLists.txt  package.xml
ros1819-final-project/chesslab_setup/config/: chesslab_setup.rviz  controllers.yaml  team_A.perspective  team_B.perspective
ros1819-final-project/chesslab_setup/launch/: dashboard.launch.xml  demo_services.launch  display.launch  no_cameras_sim.launch  only_cameras_w_calib_sim.launch  only_cameras_wo_calib_sim.launch  only_team_A_real.launch  only_team_A_sim.launch  only_team_B_real.launch  only_team_B_sim.launch  real_scenario.launch  simulated_scenario.launch
ros1819-final-project/chesslab_setup/msg/: ObjectInfo.msg  chessmap.msg
ros1819-final-project/chesslab_setup/robot/: camera_left.urdf.xacro  camera_right.urdf.xacro  team_A_arm.urdf.xacro  team_A_gripper.urdf.xacro  team_B_arm.urdf.xacro  team_B_gripper.urdf.xacro
ros1819-final-project/chesslab_setup/robot/models/: _d415.urdf.xacro
ros1819-final-project/chesslab_setup/src/: attach.cpp  collision.cpp  deattach.cpp  ik.cpp  movepiece.cpp  node.cpp  object_info.hpp  planmotions.cpp
ros1819-final-project/chesslab_setup/srv/: attachobs2robot.srv  checkcastle.srv  checkmate.srv  checkrule.srv  getobstaclepos.srv  ik.srv  setobjpose.srv  setrobconf.srv  shareID.srv
ros1819-final-project/chesslab_setup/worlds/: chesslab.world
ros1819-final-project/gazebo_ros_link_attacher/: CMakeLists.txt
ros1819-final-project/gazebo_ros_link_attacher/include/: gazebo_ros_always_attached.h
ros1819-final-project/gazebo_ros_link_attacher/src/: gazebo_ros_always_attached.cpp
ros1819-final-project/kautham/include/kautham/planner/omplc/: omplcRRTcarplanner.h
ros1819-final-project/kautham/src/planner/omplc/: omplcRRTf16planner.cpp
ros1819-final-project/realsense_lab/: CMakeLists.txt  package.xml
ros1819-final-project/realsense_lab/config/: one_realsense_aruco.rviz  two_realsense_aruco.rviz
ros1819-final-project/realsense_lab/launch/: aruco_single.launch.xml  two_realsense_calibration.launch.xml  two_realsense_calibration_real.launch  two_realsense_calibration_simulation.launch
ros1819-final-project/realsense_lab/src/: cameras_calibration.cpp
ros1819-final-project/universal_robot/universal_robot/: package.xml
ros1819-final-project/universal_robot/ur_description/urdf/: ur10.urdf.xacro  ur3.urdf.xacro
