<?xml version="1.0"?>
<package>
  <name>ur3ik</name>

  <version>1.0.0</version>

 <description>ur3 ik solver.</description>

  <maintainer email="muhayyuddin.gillani@upc.edu">Muhayyuddin</maintainer>
  <maintainer email="aliakbar.akbari@upc.edu">Aliakbar Akbari</maintainer>
  <maintainer email="jan.rosell@upc.edu">Aliakbar Akbari</maintainer>

  <license>GPLv2</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>genmsgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend> 
  <run_depend>geometry_msgs</run_depend>
  <run_depend>genmsgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>

