<?xml version="1.0"?>
<package format="2">
  <name>chesslab_setup</name>
  <version>0.0.0</version>
  <description>The chesslab_setup package</description>

  <maintainer email="jan.rosell@upc.edu">linux</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>ur_description</depend>
  <depend>robotiq_2f_model</depend>
  <depend>kautham</depend>
  <depend>ff</depend>
  <depend>ur3ik</depend>

</package>
